add luci-app-commands, remove aprx from APRS customized image

--- a/aprs-box/14.07/Makefile
+++ b/aprs-box/14.07/Makefile
@@ -11,14 +11,14 @@ OPKG_PACKAGES := kmod-ledtrig-gpio kmod-lib-zlib \
 	librt libubus-lua libuci-lua lua \
 	luci luci-base luci-app-firewall luci-base luci-i18n-english luci-i18n-chinese \
 	luci-lib-nixio luci-mod-admin-full luci-proto-ipv6 luci-proto-ppp luci-theme-bootstrap \
-	uclibcxx rpcd uhttpd uhttpd-mod-ubus zlib openssl-util wget ca-certificates 
+	uclibcxx rpcd uhttpd uhttpd-mod-ubus zlib wget ca-certificates luci-app-commands \
 OPKG_PACKAGES_EXTRA := kmod-lib-textsearch
 PREPARED_TARGETS = .check_ib .patched
 
 # for aprs packages
 OPKG_APRS_PACKAGES := kmod-usb-serial-pl2303 kmod-usb-serial-cp210x \
 	screen terminfo
-OPKG_APRS_PACKAGES += libpthread aprx tinyaprs
+OPKG_APRS_PACKAGES += libpthread tinyaprs
 PREPARED_TARGETS += .check_sdk .aprs 
 
 # for network packages as NAS or GW
