--- a/aprs-box/15.05.1/files/mt7620/repo-base.conf
+++ b/aprs-box/15.05.1/files/mt7620/repo-base.conf
@@ -11,6 +11,7 @@ src/gz mywrt_luci https://hamclub.net/openwrt/build/15.05.1/mtk/mt7620/packages/
 
 src/gz chaos_calmer_base https://openwrt.proxy.ustclug.org/chaos_calmer/15.05.1/ramips/mt7620/packages/base
 src/gz chaos_calmer_packages https://openwrt.proxy.ustclug.org/chaos_calmer/15.05.1/ramips/mt7620/packages/packages
+src/gz chaos_calmer_luci https://openwrt.proxy.ustclug.org/chaos_calmer/15.05.1/ramips/mt7620/packages/luci
 
 #src/gz chaos_calmer_base http://downloads.openwrt.org/chaos_calmer/15.05.1/ramips/mt7620/packages/base
 #src/gz chaos_calmer_packages http://downloads.openwrt.org/chaos_calmer/15.05.1/ramips/mt7620/packages/packages
