--- a/15.05.1-mtk/config/mywrt-full.config
+++ b/15.05.1-mtk/config/mywrt-full.config
@@ -1191,8 +1191,8 @@ CONFIG_BUSYBOX_DEFAULT_FEATURE_IPC_SYSLOG_BUFFER_SIZE=0
 # CONFIG_BUSYBOX_DEFAULT_FEATURE_KLOGD_KLOGCTL is not set
 CONFIG_BUSYBOX_DEFAULT_LOGGER=y
 # CONFIG_PACKAGE_ca-certificates is not set
-# CONFIG_PACKAGE_dnsmasq is not set
-# CONFIG_PACKAGE_dnsmasq-dhcpv6 is not set
+CONFIG_PACKAGE_dnsmasq=m
+CONFIG_PACKAGE_dnsmasq-dhcpv6=m
 CONFIG_PACKAGE_dnsmasq-full=y
 CONFIG_PACKAGE_dnsmasq_full_dhcpv6=y
 CONFIG_PACKAGE_dnsmasq_full_dnssec=y
@@ -1230,15 +1230,36 @@ CONFIG_PACKAGE_procd=y
 # CONFIG_PACKAGE_qos-scripts is not set
 # CONFIG_PACKAGE_resolveip is not set
 CONFIG_PACKAGE_rpcd=y
-# CONFIG_PACKAGE_rpcd-mod-file is not set
-# CONFIG_PACKAGE_rpcd-mod-iwinfo is not set
-# CONFIG_PACKAGE_rpcd-mod-rpcsys is not set
+CONFIG_PACKAGE_rpcd-mod-file=m
+CONFIG_PACKAGE_rpcd-mod-iwinfo=m
+CONFIG_PACKAGE_rpcd-mod-rpcsys=m
 CONFIG_PACKAGE_swconfig=y
 CONFIG_PACKAGE_ubox=y
 CONFIG_PACKAGE_ubus=y
 CONFIG_PACKAGE_ubusd=y
 CONFIG_PACKAGE_uci=y
-# CONFIG_PACKAGE_udev is not set
+CONFIG_PACKAGE_udev=m
+
+#
+# Configuration
+#
+# CONFIG_UDEV_DISABLE_LOGGING is not set
+# CONFIG_UDEV_ENABLE_DEBUG is not set
+CONFIG_UDEV_EXTRA_accelerometer=y
+CONFIG_UDEV_EXTRA_ata_id=y
+CONFIG_UDEV_EXTRA_cdrom_id=y
+# CONFIG_UDEV_EXTRA_collect is not set
+# CONFIG_UDEV_EXTRA_edd_id is not set
+# CONFIG_UDEV_EXTRA_firmware is not set
+# CONFIG_UDEV_EXTRA_floppy is not set
+CONFIG_UDEV_EXTRA_input_id=y
+CONFIG_UDEV_EXTRA_mtd_probe=y
+CONFIG_UDEV_EXTRA_path_id=y
+CONFIG_UDEV_EXTRA_qemu=y
+CONFIG_UDEV_EXTRA_rule_generator=y
+CONFIG_UDEV_EXTRA_scsi_id=y
+CONFIG_UDEV_EXTRA_usb_id=y
+CONFIG_UDEV_EXTRA_v4l_id=y
 CONFIG_PACKAGE_usign=y
 CONFIG_PACKAGE_wireless-tools=y
 # CONFIG_PACKAGE_zram-swap is not set
@@ -1284,8 +1305,8 @@ CONFIG_PACKAGE_wireless-tools=y
 # CONFIG_PACKAGE_r8188eu-firmware is not set
 CONFIG_PACKAGE_rt2800-pci-firmware=m
 CONFIG_PACKAGE_rt2800-usb-firmware=m
-# CONFIG_PACKAGE_rt61-pci-firmware is not set
-# CONFIG_PACKAGE_rt73-usb-firmware is not set
+CONFIG_PACKAGE_rt61-pci-firmware=m
+CONFIG_PACKAGE_rt73-usb-firmware=m
 # CONFIG_PACKAGE_rtl8192ce-firmware is not set
 # CONFIG_PACKAGE_rtl8192cu-firmware is not set
 # CONFIG_PACKAGE_rtl8192de-firmware is not set
@@ -1709,31 +1730,33 @@ CONFIG_PACKAGE_kmod-stp=m
 CONFIG_PACKAGE_kmod-tun=y
 CONFIG_PACKAGE_kmod-udptunnel4=m
 CONFIG_PACKAGE_kmod-udptunnel6=m
-# CONFIG_PACKAGE_kmod-veth is not set
-# CONFIG_PACKAGE_kmod-vxlan is not set
-# CONFIG_PACKAGE_kmod-yavlan is not set
+CONFIG_PACKAGE_kmod-veth=m
+CONFIG_PACKAGE_kmod-vxlan=m
+CONFIG_PACKAGE_kmod-yavlan=m
 
 #
 # Other modules
 #
 CONFIG_PACKAGE_kmod-6lowpan=m
-# CONFIG_PACKAGE_kmod-bcma is not set
+CONFIG_PACKAGE_kmod-bcma=m
 CONFIG_PACKAGE_kmod-bluetooth=m
 CONFIG_PACKAGE_kmod-bluetooth_6lowpan=m
 CONFIG_PACKAGE_kmod-button-hotplug=m
 CONFIG_PACKAGE_kmod-echo=m
 CONFIG_PACKAGE_kmod-eeprom-93cx6=m
-# CONFIG_PACKAGE_kmod-eeprom-at24 is not set
-# CONFIG_PACKAGE_kmod-eeprom-at25 is not set
+CONFIG_PACKAGE_kmod-eeprom-at24=m
+CONFIG_PACKAGE_kmod-eeprom-at25=m
 CONFIG_PACKAGE_kmod-gpio-beeper=m
 CONFIG_PACKAGE_kmod-gpio-button-hotplug=y
 CONFIG_PACKAGE_kmod-gpio-dev=m
-# CONFIG_PACKAGE_kmod-gpio-mcp23s08 is not set
-# CONFIG_PACKAGE_kmod-gpio-nxp-74hc164 is not set
-# CONFIG_PACKAGE_kmod-gpio-pca953x is not set
-# CONFIG_PACKAGE_kmod-gpio-pcf857x is not set
-# CONFIG_PACKAGE_kmod-iio-core is not set
-# CONFIG_PACKAGE_kmod-ikconfig is not set
+CONFIG_PACKAGE_kmod-gpio-mcp23s08=m
+CONFIG_PACKAGE_kmod-gpio-nxp-74hc164=m
+CONFIG_PACKAGE_kmod-gpio-pca953x=m
+CONFIG_PACKAGE_kmod-gpio-pcf857x=m
+CONFIG_PACKAGE_kmod-iio-core=m
+CONFIG_PACKAGE_kmod-iio-ad799x=m
+CONFIG_PACKAGE_kmod-iio-dht11=m
+CONFIG_PACKAGE_kmod-ikconfig=m
 CONFIG_PACKAGE_kmod-mmc=m
 CONFIG_PACKAGE_kmod-mmc-over-gpio=m
 
@@ -1744,18 +1767,18 @@ CONFIG_KMOD_MMC_OVER_GPIO_DI_PIN=1
 CONFIG_KMOD_MMC_OVER_GPIO_DO_PIN=3
 CONFIG_KMOD_MMC_OVER_GPIO_CLK_PIN=4
 CONFIG_KMOD_MMC_OVER_GPIO_CS_PIN=7
-# CONFIG_PACKAGE_kmod-mtdtests is not set
-# CONFIG_PACKAGE_kmod-pps is not set
-# CONFIG_PACKAGE_kmod-pps-gpio is not set
-# CONFIG_PACKAGE_kmod-ptp is not set
+CONFIG_PACKAGE_kmod-mtdtests=m
+CONFIG_PACKAGE_kmod-pps=m
+CONFIG_PACKAGE_kmod-pps-gpio=m
+CONFIG_PACKAGE_kmod-ptp=m
 CONFIG_PACKAGE_kmod-random-core=m
 CONFIG_PACKAGE_kmod-regmap=m
-# CONFIG_PACKAGE_kmod-rotary-gpio-custom is not set
+CONFIG_PACKAGE_kmod-rotary-gpio-custom=m
 CONFIG_PACKAGE_kmod-sdhci=m
 CONFIG_PACKAGE_kmod-sdhci-mt7620=m
 CONFIG_PACKAGE_kmod-serial-8250=m
 CONFIG_PACKAGE_kmod-softdog=m
-# CONFIG_PACKAGE_kmod-ssb is not set
+CONFIG_PACKAGE_kmod-ssb=m
 CONFIG_PACKAGE_kmod-zram=m
 
 #
@@ -1777,9 +1800,9 @@ CONFIG_PACKAGE_kmod-spi-gpio-old=m
 #
 CONFIG_PACKAGE_kmod-sound-core=m
 CONFIG_PACKAGE_kmod-ac97=m
-# CONFIG_PACKAGE_kmod-sound-i8x0 is not set
+CONFIG_PACKAGE_kmod-sound-i8x0=m
 CONFIG_PACKAGE_kmod-sound-mtk=m
-# CONFIG_PACKAGE_kmod-sound-seq is not set
+CONFIG_PACKAGE_kmod-sound-seq=m
 CONFIG_PACKAGE_kmod-sound-soc-ac97=m
 CONFIG_PACKAGE_kmod-sound-soc-core=m
 CONFIG_PACKAGE_kmod-usb-audio=m
@@ -1791,8 +1814,8 @@ CONFIG_PACKAGE_kmod-usb-audio=m
 # CONFIG_PACKAGE_kmod-usb-atm is not set
 CONFIG_PACKAGE_kmod-usb-cm109=m
 CONFIG_PACKAGE_kmod-usb-core=y
-# CONFIG_PACKAGE_kmod-usb-dwc2 is not set
-# CONFIG_PACKAGE_kmod-usb-dwc3 is not set
+CONFIG_PACKAGE_kmod-usb-dwc2=m
+CONFIG_PACKAGE_kmod-usb-dwc3=m
 CONFIG_PACKAGE_kmod-usb-hid=m
 CONFIG_PACKAGE_kmod-usb-net=m
 CONFIG_PACKAGE_kmod-usb-net-asix=m
@@ -1844,14 +1867,14 @@ CONFIG_PACKAGE_kmod-usb-storage=y
 CONFIG_PACKAGE_kmod-usb-storage-extras=y
 CONFIG_PACKAGE_kmod-usb-uhci=m
 CONFIG_PACKAGE_kmod-usb-wdm=m
-# CONFIG_PACKAGE_kmod-usb-yealink is not set
+CONFIG_PACKAGE_kmod-usb-yealink=m
 CONFIG_PACKAGE_kmod-usb2=y
-# CONFIG_PACKAGE_kmod-usb2-pci is not set
+CONFIG_PACKAGE_kmod-usb2-pci=m
 CONFIG_PACKAGE_kmod-usb3=m
-# CONFIG_PACKAGE_kmod-usbip is not set
+CONFIG_PACKAGE_kmod-usbip=m
 # CONFIG_PACKAGE_kmod-usbip-client is not set
 # CONFIG_PACKAGE_kmod-usbip-server is not set
-# CONFIG_PACKAGE_kmod-usbmon is not set
+CONFIG_PACKAGE_kmod-usbmon=m
 
 #
 # Video Support
@@ -1963,9 +1986,9 @@ CONFIG_PACKAGE_kmod-mt76=m
 # CONFIG_PACKAGE_kmod-p54-common is not set
 # CONFIG_PACKAGE_kmod-p54-pci is not set
 # CONFIG_PACKAGE_kmod-p54-usb is not set
-# CONFIG_PACKAGE_kmod-rt2400-pci is not set
-# CONFIG_PACKAGE_kmod-rt2500-pci is not set
-# CONFIG_PACKAGE_kmod-rt2500-usb is not set
+CONFIG_PACKAGE_kmod-rt2400-pci=m
+CONFIG_PACKAGE_kmod-rt2500-pci=m
+CONFIG_PACKAGE_kmod-rt2500-usb=m
 CONFIG_PACKAGE_kmod-rt2800-lib=m
 CONFIG_PACKAGE_kmod-rt2800-mmio=m
 CONFIG_PACKAGE_kmod-rt2800-pci=m
@@ -1977,8 +2000,8 @@ CONFIG_PACKAGE_kmod-rt2x00-lib=m
 CONFIG_PACKAGE_kmod-rt2x00-mmio=m
 CONFIG_PACKAGE_kmod-rt2x00-pci=m
 CONFIG_PACKAGE_kmod-rt2x00-usb=m
-# CONFIG_PACKAGE_kmod-rt61-pci is not set
-# CONFIG_PACKAGE_kmod-rt73-usb is not set
+CONFIG_PACKAGE_kmod-rt61-pci=m
+CONFIG_PACKAGE_kmod-rt73-usb=m
 # CONFIG_PACKAGE_kmod-rtl8180 is not set
 # CONFIG_PACKAGE_kmod-rtl8187 is not set
 # CONFIG_PACKAGE_kmod-rtl8192ce is not set
@@ -2133,31 +2156,31 @@ CONFIG_PACKAGE_luci-base=y
 #
 # Translations
 #
-# CONFIG_LUCI_LANG_hu is not set
-# CONFIG_LUCI_LANG_pt is not set
-# CONFIG_LUCI_LANG_sk is not set
-# CONFIG_LUCI_LANG_ro is not set
-CONFIG_LUCI_LANG_en=y
-# CONFIG_LUCI_LANG_el is not set
-# CONFIG_LUCI_LANG_uk is not set
-# CONFIG_LUCI_LANG_ja is not set
-# CONFIG_LUCI_LANG_vi is not set
-# CONFIG_LUCI_LANG_de is not set
-# CONFIG_LUCI_LANG_no is not set
-# CONFIG_LUCI_LANG_ms is not set
-# CONFIG_LUCI_LANG_pl is not set
-CONFIG_LUCI_LANG_zh-cn=y
-# CONFIG_LUCI_LANG_he is not set
-# CONFIG_LUCI_LANG_zh-tw is not set
-# CONFIG_LUCI_LANG_tr is not set
-# CONFIG_LUCI_LANG_sv is not set
-# CONFIG_LUCI_LANG_ru is not set
-# CONFIG_LUCI_LANG_pt-br is not set
 # CONFIG_LUCI_LANG_ca is not set
-# CONFIG_LUCI_LANG_es is not set
 # CONFIG_LUCI_LANG_cs is not set
+# CONFIG_LUCI_LANG_de is not set
+# CONFIG_LUCI_LANG_el is not set
+CONFIG_LUCI_LANG_en=y
+# CONFIG_LUCI_LANG_es is not set
 # CONFIG_LUCI_LANG_fr is not set
+# CONFIG_LUCI_LANG_he is not set
+# CONFIG_LUCI_LANG_hu is not set
 # CONFIG_LUCI_LANG_it is not set
+# CONFIG_LUCI_LANG_ja is not set
+# CONFIG_LUCI_LANG_ms is not set
+# CONFIG_LUCI_LANG_no is not set
+# CONFIG_LUCI_LANG_pl is not set
+# CONFIG_LUCI_LANG_pt is not set
+# CONFIG_LUCI_LANG_pt-br is not set
+# CONFIG_LUCI_LANG_ro is not set
+# CONFIG_LUCI_LANG_ru is not set
+# CONFIG_LUCI_LANG_sk is not set
+# CONFIG_LUCI_LANG_sv is not set
+# CONFIG_LUCI_LANG_tr is not set
+# CONFIG_LUCI_LANG_uk is not set
+# CONFIG_LUCI_LANG_vi is not set
+CONFIG_LUCI_LANG_zh-cn=y
+# CONFIG_LUCI_LANG_zh-tw is not set
 CONFIG_PACKAGE_luci-mod-admin-full=y
 
 #
@@ -2559,6 +2582,7 @@ CONFIG_PACKAGE_uhttpd-mod-ubus=y
 # CONFIG_PACKAGE_6in4 is not set
 # CONFIG_PACKAGE_6rd is not set
 # CONFIG_PACKAGE_6to4 is not set
+CONFIG_PACKAGE_aprx=m
 # CONFIG_PACKAGE_authsae is not set
 # CONFIG_PACKAGE_chat is not set
 CONFIG_PACKAGE_dnspod-utils=m
@@ -2613,6 +2637,7 @@ CONFIG_PACKAGE_shadowsocks-tools=m
 # CONFIG_PACKAGE_soloscli is not set
 # CONFIG_PACKAGE_tcpdump is not set
 # CONFIG_PACKAGE_tcpdump-mini is not set
+CONFIG_PACKAGE_tinyaprs=m
 # CONFIG_PACKAGE_uclient-fetch is not set
 # CONFIG_PACKAGE_umbim is not set
 # CONFIG_PACKAGE_uqmi is not set
