--- a/aprs-box/15.05.1/files/ar71xx/repo-base.conf
+++ b/aprs-box/15.05.1/files/ar71xx/repo-base.conf
@@ -5,9 +5,9 @@
 ## This is the local package repository, do not remove!
 src imagebuilder file:packages
 
-src/gz mywrt_base https://hamclub.net/openwrt/build/15.05.1/ar71xx/generic/packages/base
-src/gz mywrt_packages https://hamclub.net/openwrt/build/15.05.1/ar71xx/generic/packages/packages
-src/gz mywrt_luci https://hamclub.net/openwrt/build/15.05.1/ar71xx/generic/packages/luci
+#src/gz mywrt_base https://hamclub.net/openwrt/build/15.05.1/ar71xx/generic/packages/base
+#src/gz mywrt_packages https://hamclub.net/openwrt/build/15.05.1/ar71xx/generic/packages/packages
+#src/gz mywrt_luci https://hamclub.net/openwrt/build/15.05.1/ar71xx/generic/packages/luci
 
 src/gz chaos_calmer_base https://openwrt.proxy.ustclug.org/chaos_calmer/15.05.1/ar71xx/generic/packages/base
 src/gz chaos_calmer_packages https://openwrt.proxy.ustclug.org/chaos_calmer/15.05.1/ar71xx/generic/packages/packages
